# TickerTapeTallyBoard

./: .gitignore  Agents.md  EngineeringDiary.md  README.md
.claude/agents/: blindspot-scout.md  implementation-reviewer.md  plan-writer.md
backend/: Cargo.toml
backend/examples/: sharesight_import_spike.rs
backend/migrations/: 0001_create_ledger_core.sql  0002_create_market_data.sql  0003_add_instrument_isin.sql  0004_widen_import_batch_source.sql  0005_separate_dividend_per_share.sql  0006_add_instrument_conviction.sql
backend/src/: app.rs  config.rs  engine_logging.rs  lib.rs  main.rs  state.rs
backend/src/api/: cors.rs  error.rs  gains.rs  health.rs  holdings.rs  import.rs  instrument_lookup.rs  instrument_prices.rs  instruments.rs  mod.rs  portfolio.rs  prices.rs  provider_symbols.rs  rebalance.rs  root.rs  sharesight.rs  test_support.rs  transactions.rs  valuation.rs  valued_holdings.rs
backend/src/api/gains/: performance.rs  rows.rs  tests.rs  types.rs  waterfall.rs
backend/src/db/: fx_rates.rs  import_batches.rs  instruments.rs  market_data_runs.rs  mod.rs  pool.rs  prices.rs  provider_symbols.rs  testing.rs  transactions.rs
backend/src/demo/: mod.rs
backend/src/domain/: conviction.rs  mod.rs  performance.rs  position.rs  rebalance.rs  transaction.rs  valuation.rs
backend/src/import/: mod.rs  text.rs
backend/src/import/avanza/: mapper.rs  mod.rs  parser.rs
backend/src/import/core/: conviction_guard.rs  mod.rs  outcome.rs  plan.rs  writer.rs
backend/src/import/sharesight/: adapter.rs  mapper.rs  mod.rs  parser.rs  plan.rs
backend/src/market_data/: mod.rs  refresh.rs
backend/src/providers/: frankfurter.rs  mod.rs  yahoo.rs
backend/tests/: import_api.rs
backend/tests/fixtures/: avanza_synthetic.csv  avanza_synthetic_v2.csv  sharesight_synthetic.csv
backend/tests/fixtures/market_data/: frankfurter_eur_sek.json  frankfurter_usd_sek.json  yahoo_asml_as.json  yahoo_msft.json
docs/: CurrencyAndFxRules.md  DecisionLog.md  Design.CommandUndo.md  Design.ConvictionTargets.md  Design.GainsBreakdownWaterfall.md  Design.HighLevel.md  Design.HoldingsGainsViews.md  Design.RebalancePlanner.md  Investigation.PerformancePercentageMethods.md  Review.ConvictionTargets.Staged.md  VisualDesign.DarkTheme.md
docs/mockups/: GainsBreakdownWaterfall.mockup.html
docs/plans/: Design.Phase1.LedgerCore.md  Design.demo-mode.md  Design.mobile-view-design.md  Phase0.SpikesAndSkeleton.Plan.md  Plan.BrokerageCostsWaterfallRow.md  Plan.ConvictionTargets.Implementation.md  Plan.EffectiveBuyPriceMarker.md  Plan.RebalancePlanner.md  (+24 more)
frontend/: biome.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: probe-connectivity.ps1  project-stats.ps1  start.ps1
(+73 files in other folders)
