[package]
name = "ticker-tape-tally-board-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std"] }
csv = "1"
log = "0.4"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
simplelog = "0.12"
sqlx = { version = "0.8", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
tokio = { version = "1", features = [
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
